# sceno

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install-native-host.sh
.cargo/: config.toml
.github/workflows/: ci.yml
crates/beat/: Cargo.toml
crates/beat/src/: click.rs  clock.rs  detect.rs  lib.rs
crates/karaoke/: Cargo.toml
crates/karaoke/src/: config.rs  lane.rs  main.rs  score.rs  tray.rs
crates/lyrics/: Cargo.toml
crates/lyrics/src/: config.rs  lrc.rs  lrclib.rs  main.rs  player.rs
crates/media/: Cargo.toml
crates/media/src/: cue.rs  lib.rs  library.rs  lrc.rs  lrclib.rs  player.rs  sync.rs  ultrastar.rs
crates/metronome/: Cargo.toml
crates/metronome/src/: config.rs  main.rs  meter.rs  tray.rs
crates/overlay/: Cargo.toml
crates/overlay/src/: lib.rs  paths.rs  settings.rs  stack.rs  trace.rs  tray.rs  widgets.rs
crates/pitch/: Cargo.toml
crates/pitch/src/: capture.rs  color.rs  detect.rs  lib.rs  note.rs  smooth.rs
crates/pitch/tests/: detection.rs
crates/tuner/: Cargo.toml
crates/tuner/src/: audio.rs  config.rs  instrument.rs  main.rs  meter.rs  note.rs  tray.rs
crates/vocalize/: Cargo.toml
crates/vocalize/src/: config.rs  exercise.rs  main.rs  stats.rs  tone.rs  tray.rs
docs/plans/: 2026-06-12-overlay-workspace-extraction.md  2026-06-12-vocal-tuner.md  2026-06-13-sceno-professionalization.md  2026-06-13-tuner-meters.md  2026-06-24-vocalize.md  2026-06-25-vocalize-ep-timbre.md  2026-06-26-macos-compat.md  2026-06-29-lyrics-macos-nowplaying.md  2026-06-29-pitch-clarity-tuning.md  2026-06-29-pitch-pyin.md  2026-06-29-vocalize-matcher-ux.md  2026-06-29-vocalize-scales-stats.md
docs/specs/: 2026-06-12-vocal-tuner-design.md  2026-06-13-sceno-professionalization-design.md  2026-06-13-tuner-meters-design.md  2026-06-18-karaoke-scoring-design.md  2026-06-18-lyrics-word-highlight-design.md  2026-06-18-tuner-pro-design.md  2026-06-24-vocalize-design.md  2026-06-25-vocalize-ep-timbre-design.md
extension/: background.js  com.vitormakino.lyrics_on_screen.json  content_youtube.js  content_ytmusic.js  inject_raf.js  manifest.json
src/: lrc.rs  lrclib.rs  main.rs  player.rs
