[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Vitor Makino <vitor.makino@gmail.com>"]
license = "MIT"
repository = "https://github.com/vitormakino/sceno"
readme = "README.md"
keywords = ["wayland", "overlay", "layer-shell", "lyrics", "tuner"]
categories = ["gui", "multimedia"]

[workspace.dependencies]
iced = "0.14"
iced_layershell = "0.18"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ksni = "0.2"
libc = "0.2"
mpris = "2"
ureq = "2"
