[package]
name = "lyrics"
version.workspace = true
edition.workspace = true

[dependencies]
iced.workspace = true
iced_layershell.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
ksni.workspace = true
libc.workspace = true
mpris.workspace = true
ureq.workspace = true
