[package]
name = "lyrics"
description = "Synced lyrics overlay driven by MPRIS + LRCLIB."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
overlay = { path = "../overlay" }
iced.workspace = true
iced_layershell.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
ksni.workspace = true
libc.workspace = true
mpris.workspace = true
ureq.workspace = true
