[package]
name = "media"
description = "Now-playing tracking (MPRIS) + lyrics sources (LRCLIB, UltraStar) shared by sceno apps."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
overlay = { path = "../overlay" }
serde.workspace = true
serde_json.workspace = true
mpris.workspace = true
ureq.workspace = true
