[package]
name = "media"
description = "Now-playing tracking (MPRIS) + lyrics sources (LRCLIB, UltraStar) shared by sceno apps."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
overlay = { path = "../overlay" }
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true

# Now-playing source is platform-specific: MPRIS (D-Bus) on Linux, an
# AppleScript backend (no extra deps, just `osascript`) elsewhere.
[target.'cfg(target_os = "linux")'.dependencies]
mpris.workspace = true
