[package]
name = "overlay"
description = "Shared Wayland layer-shell overlay base for the sceno apps."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced.workspace = true
iced_layershell.workspace = true
ksni.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
dbus.workspace = true
futures.workspace = true
