[package]
name = "pitch"
description = "Microphone pitch detection + note math shared by the sceno overlay apps."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
overlay = { path = "../overlay" }
cpal = "0.15"
pyin = { version = "1.2.0", default-features = false }
