[package]
name = "tuner"
description = "Vocal tuner overlay: microphone pitch detection to note + tuning meter."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
overlay = { path = "../overlay" }
pitch = { path = "../pitch" }
iced = { workspace = true, features = ["canvas"] }
iced_layershell.workspace = true
futures.workspace = true
serde.workspace = true
ksni.workspace = true

[dev-dependencies]
serde_json.workspace = true
