[package]
name = "tuner"
description = "Vocal tuner overlay: microphone pitch detection to note + tuning meter."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
overlay = { path = "../overlay" }
pitch = { path = "../pitch" }
iced = { workspace = true, features = ["canvas"] }
futures.workspace = true
serde.workspace = true

# The system tray (ksni) and the `#[to_layer_message]` macro (iced_layershell)
# are Linux-only; off Linux the overlay runs without a tray (see CLAUDE.md).
[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell.workspace = true
ksni.workspace = true

[dev-dependencies]
serde_json.workspace = true
