[package]
name = "tuner"
description = "Vocal tuner overlay: microphone pitch detection to note + tuning meter."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
overlay = { path = "../overlay" }
pitch = { path = "../pitch" }
iced = { workspace = true, features = ["canvas"] }
futures.workspace = true
serde.workspace = true

# The `#[to_layer_message]` macro (iced_layershell) is Linux-only. The tray menu
# is built from `overlay::tray` (ksni on Linux, tray-icon on macOS) — no direct
# ksni dependency here anymore.
[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell.workspace = true

[dev-dependencies]
serde_json.workspace = true
