[package]
name = "vocalize"
description = "Call-and-response ear/voice trainer overlay: sing the played note to advance."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
overlay = { path = "../overlay" }
pitch = { path = "../pitch" }
iced = { workspace = true }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
cpal = "0.15"

# The system tray (ksni) and the `#[to_layer_message]` macro (iced_layershell)
# are Linux-only; off Linux the overlay runs without a tray (see CLAUDE.md).
[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell.workspace = true
ksni.workspace = true
